Bug: Adjusted article sidebar wrapping. Bug: Fixed all links throughout the page.

--- a/docs/style.scss
+++ b/docs/style.scss
@@ -194,6 +194,16 @@ body
       padding: 10px;
       border: 2px solid #fffffe;
       margin-bottom: 0;
+
+
+    }
+
+    .logo:hover {
+      background-color: $text;
+      a
+      {
+        color: $primary-color;
+      }
     }
 
     .logo-text
@@ -207,10 +217,7 @@ body
     {
       color: $text;
     }
-    a:hover
-    {
-      color: $muted-text;
-    }
+
 
   }
 
@@ -225,7 +232,7 @@ body
 
 /* Start of Homepage Styling*/
 
-//Hero Sytling (Carousel)
+//Hero Styling (Carousel)
 #hero
 {
   width: 100%;
@@ -630,6 +637,7 @@ body
 }
 /* End of Homepage Styling*/
 
+
 /* Category Title Global Styling */
 .cat
 {
@@ -650,7 +658,6 @@ body
   color: $gk-color;
 }
 
-
 .footer
 {
   font-size: .75rem;
@@ -662,6 +669,7 @@ body
 
 
 /* Start of Article Template Styling*/
+
 //Article Contents
 .article-container
 {
@@ -670,6 +678,7 @@ body
   margin: 0 auto;
   @include flex-center();
 }
+
 .template-article-row
 {
   margin-top: 5rem;
@@ -680,6 +689,7 @@ body
   }
 
 }
+
 .article-body
 {
   width: 80%;
@@ -803,6 +813,11 @@ body
       padding-bottom: 1rem;
       margin-bottom: 3rem;
     }
+    .link-to-next
+    {
+      font-size: 1rem;
+      @include font-bold();
+    }
   }
 
 
@@ -816,7 +831,7 @@ body
   {
     width: 100%;
     align-items: end;
-
+    padding-bottom: 2rem;
   }
 
   @media (max-width: 1199px) and (min-width: 992px)
@@ -844,15 +859,11 @@ body
   span
   {
     font-size: 1rem;
-    color: $text;
+    color: $paragraph;
     @include font-bold();
-    text-decoration: underline;
+    //text-decoration: underline;
   }
-  @media (max-width: $laptop)
-  {
-    width: 45%;
-    margin-top: 0;
-  }
+
 
   @media (max-width: $landscape)
   {
@@ -868,6 +879,7 @@ body
     flex-direction: row;
     margin: 0 auto;
     padding-left: 1rem;
+
     .sidebar-img
     {
       width: 4rem;
@@ -878,7 +890,7 @@ body
     }
     li a
     {
-      color: $paragraph;
+      color: $text;
       font-size: 1rem;
       @include font-medium();
       text-decoration: underline;
@@ -900,12 +912,12 @@ body
 
 
 }
-/* Start of Article Template Styling*/
+
+/* End of Article Template Styling*/
 
 
 
 /* Start of Topic Page Styling*/
-
 .topics-header
 {
   h1
@@ -1035,9 +1047,10 @@ body
     -webkit-box-orient: vertical;
     line-height: 27px;
 }
-
 /* End of Topic Page Styling*/
 
+
+/* Start of Team Page Styling */
 .team-container
 {
   width: 80%;
@@ -1100,8 +1113,10 @@ body
     }
   }
 }
+/* End of Team Page Styling */
 
 
+/* Start of About Page Styling */
 .about-container
 {
   padding: 5rem 0;
@@ -1137,3 +1152,4 @@ body
   }
 
 }
+/* End of About Page Styling */
